Moving sprite but not loaded through bundle

--- a/assets/css/canvas.css
+++ b/assets/css/canvas.css
@@ -1,5 +1,6 @@
  #myCanvas {
     background: darkgrey;
+    /* background-image: url("/Users/roundabout/Desktop/gridlocked/assets/images/image79.jpg"); */
     display: block;
     margin: 0 auto;
      border: 5px solid black;
